// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthPage tests renders correctly 1`] = `
<Fragment>
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
  <Panel.Footer
    left={false}
    right={
      <small>
        <PageLink
          to="/auth/sso"
        >
          Single Sign-On
        </PageLink>
      </small>
    }
  />
</Fragment>
`;

exports[`AuthPage tests should redirect after login 1`] = `<withRouter() />`;

exports[`AuthPage tests should redirect to TFA iff enabled 1`] = `
<withRouter()
  to="/auth/tfa"
/>
`;

exports[`AuthPage tests should redirect to enable-tfa iff required 1`] = `
<withRouter()
  to="/auth/enable-tfa"
/>
`;

exports[`AuthPage tests should show link to join when has_signup feature flag exists 1`] = `
<Fragment>
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="Log In"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
    />
  </Panel>
  <Panel.Footer
    left={
      <div>
        <small>
          Don't have an account? 
          <PageLink
            to="/join"
          >
            Sign up
          </PageLink>
          .
        </small>
        <br />
      </div>
    }
    right={
      <small>
        <PageLink
          to="/auth/sso"
        >
          Single Sign-On
        </PageLink>
      </small>
    }
  />
</Fragment>
`;
